--- a/platformio.ini
+++ b/platformio.ini
@@ -8,21 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32s3_dev]
+[env:esp32-s3-devkitc-1]
 platform = espressif32
-board = esp32-s3-devkitc-1
 framework = arduino
-board_build.flash_mode = qio
-monitor_speed = 921600
+
+board = esp32-s3-devkitc-1
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
-build_flags = -DCORE_DEBUG_LEVEL=0
-board_build.partitions = min_spiffs.csv
+
+board_upload.flash_size = 8MB
+board_upload.maximum_ram_size = 327680
+board_upload.maximum_size = 8388608
+
+build_flags = -DARDUINO_ESP32S3_DEV=1
+monitor_speed = 115200
+
 lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.9
-	arduino-libraries/Arduino_JSON@^0.2.0
 	jchristensen/DS3232RTC@^2.0.1
 	zinggjm/GxEPD2@^1.5.8
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	elpaso/Rtc_Pcf8563@0.0.0-alpha+sha.6b5adc2ced
-    arduino-libraries/NTPClient@3.2.1
