--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,15 @@ platform = espressif32
 framework = arduino
 
 board = esp32-s3-devkitc-1
+board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
+board_build.partitions = max_app_8MB.csv
 
 board_upload.flash_size = 8MB
 board_upload.maximum_ram_size = 327680
 board_upload.maximum_size = 8388608
+board_build.flash_mode = qio
 
 build_flags = -DARDUINO_ESP32S3_DEV=1
 monitor_speed = 115200
